[package]
name = "catsploit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catsploit_lib = { path = "../catsploit_lib" }
log = "0.4.17"
env_logger = "0.10.0"
prettytable-rs = "0.10.0"
tokio = { version = "1.25.0", features = ["full"] }

# TODO: matching todo in library Cargo.toml
dyn-clone = "1.0.10"
