[package]
name = "catsploit"
version = "0.1.0"
edition = "2021"
description = "An open-source modern exploitation framework inspired by Metasploit"
homepage = "https://github.com/tirax-lab/catsploit/tree/main/catsploit"
repository = "https://github.com/tirax-lab/catsploit/tree/main/catsploit"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: when doing local development on CLI with changes to library, can change dependency to path instead of crates.io version
# catsploit_lib = { path = "../catsploit_lib" }
catsploit_lib = "0.1.0"
log = "0.4.17"
env_logger = "0.10.0"
prettytable-rs = "0.10.0"
