[package]
name = "catsploit_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }

# TODO: below 2 crates are probably tech debt, required for now to be able to have async pretask method on payload and clone it so that it can be sent into background to run
async-trait = "0.1.64"
dyn-clone = "1.0.10"
